--- a/01.Simple-Sum.md
+++ b/01.Simple-Sum.md
@@ -1,6 +1,5 @@
 # Sum
-The formula to calculate the area of a circumference is defined as A = π . R2. Considering to this problem that π = 3.14159:
-
+Read two integer values, in this case, the variables A and B. After this, calculate the sum between them and assign it to the variable SOMA. Write the value of this variable.
 ```python
 a = int(input())
 b = int(input())
