--- a/04.Average-1.md
+++ b/04.Average-1.md
@@ -18,6 +18,6 @@ a = float(input())
 b = float(input())
 
 avg = (((a * 3.5) + (b * 7.5)) / 11)
-#print(f'MEDIA = {media:.5f}')
+#print(f'MEDIA = {avg:.5f}')
 print('MEDIA = %.5f' % avg)
 ```
